<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Estudios Biblícos</string>
    <string name="app_name">Estudios Biblícos</string>
	<string name="login">Nombre Usuario</string>
	<string name="btnfbloginmsg">Conectar vía facebook</string>
	<string name="btnloginmsg">Iniciar Sesión</string>
	<string name="registertitle">Registre sus datos aquí</string>
	<string name="studiestitle">Estudios Disponibles</string>
    <string name="title_activity_studies_interaction">Enseñanzas Biblicas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnnextstr">Proximo Tema</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="option1">Opción 1</string>
    <string name="option2">Opción 2</string>
    <string name="option3">Opción 3</string>
    <string name="regname">Nombre Completo</string>
    <string name="regnametooltip">Indique su Nombre Completo</string>
    <string name="regdir">Dirección</string>
    <string name="regphone">Teléfono</string>
    <string name="regmail">Correo Electrónico</string>
    <string name="regdirtooltip">Indique su dirección</string>
    <string name="regphonetooltip">Indique su Nro. Telefónico</string>
    <string name="regmailtooltip">Indique su Correo Electrónico</string>
    <string name="regbtnname">Registrar Datos</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="titlesplash">Inicializando...</string>
    <string name="test">Test</string>
    <string name="html_lesson1">
        <![CDATA[
        <div>
           <h4>
              <span>
              public static
              <a href="/reference/android/text/Spanned.html">Spanned</a>
              </span>
              <span>fromHtml</span>
              <span>(<a href="/reference/java/lang/String.html">String</a> source)</span>
           </h4>
           <div>
              <div>  Added in <a href="/guide/topics/manifest/uses-sdk-element.html#ApiLevels">API level 1</a></div>
           </div>
           <div>
              <div>
                 <p>Returns displayable styled text from the provided HTML string.
                    Any &lt;img&gt; tags in the HTML will display as a generic
                    replacement image which your program can then go through and
                    replace with real images.
                 </p>
                 <p>This uses TagSoup to handle real HTML, including all of the brokenness found in the wild.</p>
              </div>
           </div>
        </div>
        ]]>
    </string>
</resources>