<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    
	<TextView
		android:id="@+id/registrotitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registertitle"
		android:textSize="22sp"/>


	<TextView
		android:id="@+id/txtVNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regname" />
	<EditText
		android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:inputType="text"
		android:hint="@string/regnametooltip"
        android:text="" />
	

	<TextView
		android:id="@+id/txtVDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regdir" />
	<EditText
		android:id="@+id/txtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:inputType="text|textMultiLine"
		android:hint="@string/regdirtooltip"
        android:text="" />
	<TextView
		android:id="@+id/txtVPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regphone" />
	<EditText
		android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:inputType="phone"
		android:hint="@string/regphonetooltip"
        android:text="" />
	<TextView
		android:id="@+id/txtVEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regmail" />
	<EditText
		android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:inputType="textEmailAddress"
		android:hint="@string/regmailtooltip"
        android:text="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regbtnname"
        android:id="@+id/btnRegistrar"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickBtnRegistrar"/>


</LinearLayout>
